# backend/src/Types/items.ts
@@ -1,0 +1,8 @@
+type Item = {
+    item_id?: number;
+    item_name: string;
+    item_type: "חורף" | "שהייה";
+  };
+  
+  export { Item };
+  
